<resources>
    <string name="app_name">Close.Me</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_scanner">Scanner</string>
    <string name="google_maps_key">AIzaSyAk_Lp6cRfjrWp8HrYvzncWycVz5SqcjlA</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="stop_foreground_service">Stop foreground service</string>
    <string name="title_map">Map</string>
    <string name="title_setup">Setup</string>
    <string name="distance">%.2f meter</string>
    <string name="rssi">%d dBm</string>
    <string name="temperature">%d °C</string>
    <string name="humidity">%1$d%%</string>

    <string name="place_type_floor_breacon">FLoor Beacon</string>
    <string name="place_type_door_breacon">Door beacon</string>
    <string name="place_type_window_breacon">Window Beacon</string>
    <string name="place_type_not_placed">Not Placed</string>
    <string name="device_number">Beacon No.: %d</string>
    <string name="placed">Placed as\n%s.</string>
    <string name="percent">%1$d%%</string>
    <string name="show_on_map">Show on Map</string>
    <string name="beacons_found">%d beacon \nfound</string>
    <string name="vibrate">Vibrate</string>
    <string name="ring">Ring</string>
    <string name="current_room">Current Room:  %s</string>
    <string name="open_window">Open Window: %s</string>
    <string name="missing_beacon">One beacon is \nmissing from the network</string>
    <string name="missing_beacons">%d beacons are \nmissing from the network</string>
    <string name="missing_beacon_headline">Missing Beacon</string>
    <string name="not_connected">Not connected to\n any beacon mesh</string>
    <string name="no_connection">No Connection</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="placeholder_minus">-</string>
    <string name="not_in_range">Not in range.</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="information_list_one">You will find information to the placed beacons in this list</string>
    <string name="information_list_two">Choose a beacon from the list and place it by clicking on the map</string>
    <string name="information_list_three">Go back to the last page und click USE to place beacons on the map</string>
    <string name="dialog_placing_title">Beacon type selection</string>
    <string name="dialog_placing_question">What type of beacon did you place?</string>
    <string name="dialog_placing_window">Monitored Window</string>
    <string name="dialog_placing_floor">Network Repeater</string>
    <string name="dialog_placing_door">Door Area</string>
    <string name="bluetooth_deactivated">Bluetooth deactivated</string>
    <string name="please_turn_bluetooth_on">Please turn Bluetooth on to make this application work.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="dots">…</string>
    <string name="forward">Forward</string>
    <string name="permission_message">The application needs the following permission to work properly.</string>
    <string name="permission">Permission</string>
    <string name="setup_message">It looks like you didn\'t set up any beacons. Do you want to do it now?</string>
    <string name="setup">Setup</string>
    <string name="setup_information_next_step">In the next step you can check the beacon you want to use and place them on the map.</string>
    <string name="setup_information_finish">Mit Klick auf den Button Schließen sie den Setup-Vorgang ab.</string>
    <string name="no_beacons_found">No beacons\n found</string>
    <string name="credits">Credits:</string>
    <string name="credit_icons">Icon made by Freepik from www.flaticon.com\n Icon made by Smashicons from www.flaticon.com</string>
    <string name="beacon_not_placed">Not placed</string>
    <string name="back">Backward</string>
    <string name="beacon_placement_information">The next steps will guide you through the setup process. There are three types how an beacon can be placed:</string>
    <string name="door_area_information">The beacon can be placed as a door area to mark an entrance.</string>
    <string name="beacon_number">Beacon no:</string>
    <string name="mac_address">Mac-Address:</string>
    <string name="scanned_item_distance">Distance:</string>
    <string name="scanned_item_rssi">RSSI:</string>
    <string name="networkid">NetworkID:</string>
    <string name="clusterid">ClusterId:</string>
    <string name="spotcount">SpotCount:</string>
    <string name="active">Active:</string>
    <string name="channel">Channel:</string>
    <string name="clustersize">Clustersize:</string>
    <string name="scanned_item_humidity">Humidity:</string>
    <string name="scanned_item_temperature">Temperature:</string>
    <string name="more">More</string>
    <string name="no_window_open">No window open.</string>
    <string name="unsecured_windows">Unsecured \nWindows</string>
    <string name="use">Use</string>
    <string name="replace">Replace</string>
    <string name="place">Place</string>
    <string name="currently_placing">Currently placing :</string>
    <string name="alert">Alert:</string>
</resources>
