<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/background_round_stroke_complete"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:columnCount="3"
        android:gravity="center"
        android:rowCount="6">

        <TextView
            android:id="@+id/deviceNumberDescription"
            style="@style/headlineBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/beacon_number" />

        <TextView
            android:id="@+id/deviceNumber"
            style="@style/headlineBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            tools:text="DeviceNumber" />

        <TextView
            android:id="@+id/deviceNameDescription"
            style="@style/headlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/mac_address" />

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            tools:text="DeviceName" />

        <TextView
            android:id="@+id/rssiDescription"
            style="@style/headlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/scanned_item_distance" />

        <LinearLayout
            android:layout_row="4"
            android:layout_column="0"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/temperatureImage"
                android:layout_width="42dp"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:alpha="0.3"
                android:padding="2dp"
                android:src="@drawable/temperate_vektor" />

            <ImageView
                android:id="@+id/humditiyImage"
                android:layout_width="32dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:alpha="0.3"
                android:src="@drawable/humidity_vektor" />
        </LinearLayout>

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            tools:text="TYPE" />

        <TextView
            style="@style/headlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/scanned_item_rssi" />

        <TextView
            android:id="@+id/rssi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="8dp"
            tools:text="RSSI" />


        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="8dp"
            tools:text="Distance" />

        <TextView
            android:id="@+id/placed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/placed"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />


        <CheckBox
            android:id="@+id/useCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:text="@string/use"
            android:textAllCaps="true" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="horizontal">

        <TextView
            style="@style/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="18dp"
            android:text="@string/unsecured_windows" />

        <TextView
            android:id="@+id/noUnsecuredWindow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/no_window_open" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/alarmList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <ImageView
        android:id="@+id/moreButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_columnWeight="1"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/arrow_down_vektor" />

    <LinearLayout
        android:id="@+id/moreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="NestedWeights">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temperatureDescription"
                style="@style/gridItemDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/scanned_item_temperature" />

            <TextView
                android:id="@+id/temperature"
                style="@style/gridItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="Temperature" />

            <TextView
                android:id="@+id/humditiyDescription"
                style="@style/gridItemDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/scanned_item_humidity" />

            <TextView
                android:id="@+id/humditiy"
                style="@style/gridItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="Humidity" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/clusterIdDescription"
                style="@style/gridItemDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/clusterid" />


            <TextView
                android:id="@+id/clusterId"
                style="@style/gridItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="clusterId" />

            <TextView
                android:id="@+id/spotCountDescription"
                style="@style/gridItemDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/spotcount" />

            <TextView
                android:id="@+id/spotCount"
                style="@style/gridItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="spotCount" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/clusterSizeDescription"
                style="@style/gridItemDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/clustersize" />

            <TextView
                android:id="@+id/clusterSize"
                style="@style/gridItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="clusterSize" />


            <TextView
                android:id="@+id/networkIdDescription"
                style="@style/gridItemDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/networkid" />

            <TextView
                android:id="@+id/networkId"
                style="@style/gridItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="networkId" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/channelDescription"
                style="@style/gridItemDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/channel" />

            <TextView
                android:id="@+id/channel"
                style="@style/gridItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="channel" />

            <TextView
                android:id="@+id/activeDescription"
                style="@style/gridItemDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/active" />

            <TextView
                android:id="@+id/active"
                style="@style/gridItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="spotCount" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>