<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="?actionBarSize"
    tools:context=".fragment.SetupInformationFragment">

    <LinearLayout
        android:id="@+id/firstInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/headlineBig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Setup"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <TextView
            style="@style/informationBig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/beacon_placement_information" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/marker_door_vektor" />

            <TextView
                style="@style/informationBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/door_area_information" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/marker_window_closed_vektor" />

            <TextView
                style="@style/informationBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="If the beacon has a window sensor it can mark and monitor a specific window." />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/marker_floor_vektor" />

            <TextView
                style="@style/informationBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="To guarantee a connection to all beacons the beacon can be set up as a signal repeater."/>
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:id="@+id/impressum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/informationBig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/credits" />

        <TextView
            android:textAlignment="center"
            style="@style/headlineSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/credit_icons" />
    </LinearLayout>

    <TextView
        android:id="@+id/setupInformationText"
        style="@style/informationBig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Here Are some Instructions" />


    <Button
        style="@style/button"
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Abschließen"
        android:visibility="gone" />

</LinearLayout>