<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.constraint.Guideline
        android:id="@+id/guide75"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.69" />

    <android.support.constraint.Guideline
        android:id="@+id/guide25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />


    <TextView
        android:id="@+id/deviceNumberDescription"
        style="@style/headlineBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/beacon_number"
        app:layout_constraintBottom_toTopOf="@+id/deviceNameDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deviceNumber"
        style="@style/headlineBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/deviceName"
        app:layout_constraintStart_toStartOf="@+id/guide25"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="DeviceNumber" />

    <TextView
        android:id="@+id/deviceNameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/mac_address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/deviceNumber"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="DeviceName" />


    <Button
        android:id="@+id/placeButton"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/place"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide75"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/placeType"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide75"
        app:layout_constraintTop_toBottomOf="@+id/placeButton"
        tools:text="placeType" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide75"
        app:layout_constraintTop_toBottomOf="@+id/placeButton">

        <ImageView
            android:id="@+id/temperatureImage"
            android:layout_width="46dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:padding="2dp"
            android:src="@drawable/temperate_vektor" />

        <ImageView
            android:id="@+id/humditiyImage"
            android:layout_width="34dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:src="@drawable/humidity_vektor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rssiDescription" />


    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</android.support.constraint.ConstraintLayout>